# meridian-dashboard

./: .gitignore  README.md
meridian/: index.html  main.js  package.json  styles.css
meridian-full/: README.md  package.json
meridian-full/app/: globals.css  layout.tsx
meridian-full/app/components/layout/: PageLayout.tsx  TopNav.tsx
meridian-full/app/governance/: page.tsx
meridian-full/app/reports/: page.tsx
meridian-full/app/settings/: page.tsx
meridian-full/app/vaults/: page.tsx
meridian-full/components/layout/: PageLayout.tsx
meridian-full/hooks/: useMeridian.ts
meridian-full/lib/: constants.ts
meridian-full/src/lib/: anchor.ts
meridian-full/src/lib/idl/: meridian.json
meridian-next/app/: page.tsx
meridian-next/app/dashboard/: page.tsx
meridian-next/app/vaults/: page.tsx
meridian-next/components/layout/: TopNav.tsx
meridian-program/: Anchor.toml  Cargo.toml
meridian-program/programs/meridian/: Cargo.toml
meridian-program/programs/meridian/src/: constants.rs  errors.rs  lib.rs  tests.rs
meridian-program/programs/meridian/src/instructions/: approve_transaction.rs  create_transaction.rs  deposit.rs  initialize_vault.rs  mod.rs  rebalance.rs  update_mandate.rs  withdraw.rs
meridian-program/programs/meridian/src/state/: mandate.rs  mod.rs  multisig.rs  position.rs  vault.rs  whitelist.rs
meridian-program/tests/: meridian.ts
meridian/components/vaults/: DepositModal.tsx
