[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-program = { git = "https://github.com/solana-labs/solana.git", tag = "v1.18.26" }
solana-zk-token-sdk = { git = "https://github.com/solana-labs/solana.git", tag = "v1.18.26" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git", tag = "v1.18.26" }
